--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -29,17 +29,21 @@
         <name>CustomApplication</name>
     </types>
     <types>
-        <members>LwcGallery</members>
+        <members>Lwc_Gallery</members>
         <members>Bike_Card</members>
         <members>Your_Bike_Selection</members>
         <name>CustomTab</name>
     </types>
     <types>
-        <members>LwcGalleryFlexiPage</members>
+        <members>Lwc_Gallery</members>
         <members>Bike_Card</members>
         <members>Your_Bike_Selection</members>
         <members>Trailblazers_UtilityBar</members>
         <name>FlexiPage</name>
+    </types>
+    <types>
+        <members>Trailblazers</members>
+        <name>PermissionSet</name>
     </types>
     <version>58.0</version>
 </Package>
