--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "tyoshikawa1106 company",
+  "orgName": "tyoshikawa1106 ScratchOrg",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
