--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -34,6 +34,7 @@
         <members>Your_Bike_Selection</members>
         <members>Working_with_Data</members>
         <members>LWC_Visualforce_Devs</members>
+        <members>Event_Comms</members>
         <name>CustomTab</name>
     </types>
     <types>
@@ -42,6 +43,7 @@
         <members>Your_Bike_Selection</members>
         <members>Working_with_Data</members>
         <members>LWC_Visualforce_Devs</members>
+        <members>Event_Comms</members>
         <members>Trailblazers_UtilityBar</members>
         <name>FlexiPage</name>
     </types>
