--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -44,6 +44,7 @@
         <members>Misc_Get_UserId</members>
         <members>Has_View_Setup</members>
         <members>Paginator</members>
+        <members>Lds_Create_Record</members>
         <name>CustomTab</name>
     </types>
     <types>
@@ -59,9 +60,10 @@
         <members>Hello_Expressions</members>
         <members>Libs_D3</members>
         <members>Label_Example</members>
-        <members>Misc_Get_UserId</members>Paginator
+        <members>Misc_Get_UserId</members>
         <members>Has_View_Setup</members>
         <members>Paginator</members>
+        <members>Lds_Create_Record</members>
         <members>Trailblazers_UtilityBar</members>
         <name>FlexiPage</name>
     </types>
