--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -49,6 +49,7 @@
         <members>My_Tree_Grid</members>
         <members>Apex_Wire_Method_To_Property</members>
         <members>Apex_Imperative_Method</members>
+        <members>LwcHelloWolrd</members>
         <name>CustomTab</name>
     </types>
     <types>
